--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,15 +32,17 @@ dependencies:
   image_picker: ^0.7.2
   http: ^0.13.0
   shared_preferences: ^2.0.3
-  firebase_core: ^1.0.1
+  firebase_core: ^1.10.5
   firebase_storage: ^8.0.0
-  cloud_firestore: ^1.0.1
+  cloud_firestore: ^3.1.4
   firebase_messaging: ^11.1.0
-  firebase_auth: ^1.0.1
+  firebase_auth: ^3.3.3
   awesome_dialog: ^1.3.1
   dropdown_search: ^0.4.8
-  google_sign_in: ^5.0.2
+  google_sign_in: ^5.2.1
   splashscreen: ^1.3.5
+  provider: ^6.0.1
+  flutter_signin_button: ^2.0.0
 
 dev_dependencies:
   flutter_test:
