--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   splashscreen: ^1.3.5
   provider: ^6.0.1
   flutter_signin_button: ^2.0.0
+  fluttertoast: ^8.0.8
 
 dev_dependencies:
   flutter_test:
