--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.7.1 <3.0.0"
 
 dependencies:
   flutter:
@@ -43,6 +43,7 @@ dependencies:
   splashscreen: ^1.3.5
   provider: ^6.0.1
   flutter_signin_button: ^2.0.0
+  fluttertoast: ^8.0.8
 
 dev_dependencies:
   flutter_test:
